fix overflow of svg

--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@
 }
 
 .App-logo {
-  transform: rotateX("40");
+  overflow: visible;
 }
 
 .buttonrow {
